--- a/index.html
+++ b/index.html
@@ -29,11 +29,18 @@
       header {
         width: 98%;
       }
+      #banner {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+      }
 
-      #logo {
-        max-width: 150px;
-        margin: 3% 0 3% 3%;
-        float: left;
+      #welcome {
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        padding-top: 10px;
       }
 
       #wrapper {
@@ -52,6 +59,10 @@
 
       #social > li > a > img {
         max-width: 35px;
+      }
+
+      #endsoc {
+        float: right;
       }
 
       h1,
@@ -79,7 +90,7 @@
       }
 
       #contact {
-        text-align: center;
+        text-align: left;
         padding-bottom: 3%;
         line-height: 16px;
         font-size: 12px;
@@ -90,63 +101,66 @@
   <body>
     <div id="wrapper">
       <header>
-        <div id="logo">
-          <img
-            src="assets/Crafts_&_Coffee.png"
-            alt=""
-          />
-        </div>
-        <div>
-          <ul id="social">
-            <li>
-              <a href="#" target="_blank"
-                ><img
-                  src="https://mdbgo.io/dawidadach/responsiveemail/img/fb-color.png"
-                  alt=""
-              /></a>
-            </li>
-            <li>
-              <a href="#" target="_blank"
-                ><img
-                  src="https://mdbgo.io/dawidadach/responsiveemail/img/in-color.png"
-                  alt=""
-              /></a>
-            </li>
-            <li>
-              <a href="#" target="_blank"
-                ><img
-                  src="https://mdbgo.io/dawidadach/responsiveemail/img/tw-color.png"
-                  alt=""
-              /></a>
-            </li>
-            <li>
-              <a href="#" target="_blank"
-                ><img
-                  src="https://mdbgo.io/dawidadach/responsiveemail/img/yt-color.png"
-                  alt=""
-              /></a>
-            </li>
-          </ul>
+        <div id="welcome">
+          <h1>
+            Welcome to Crafts and Coffee
+          </h1>
         </div>
       </header>
       <div id="banner">
         <img
-          src="assets/crafts.png"
+          src="assets/Crafts_&_Coffee.png"
           alt=""
         />
       </div>
       <div class="one-col">
-        <h1>Welcome to Crafts and Coffee</h1>
-
-        <p>
+        <h3>
+         <p>
             Thank you for signing up for Crafts and Coffee updates. 
             I'm really happy to have you! Click the link below to go to my etsy page and view my products!
         </p>
-
+         </h3>
         <a href="https://etsy.me/3ADTO61" class="btn">Visit my etsy page!</a>
 
         <hr />
-
+         <div id="endsoc">
+           <h3>
+             Check us out on social media!
+           </h3>
+           <div>
+            <ul id="social">
+              <li>
+                <a href="#" target="_blank"
+                  ><img
+                    src="https://mdbgo.io/dawidadach/responsiveemail/img/fb-color.png"
+                    alt=""
+                /></a>
+              </li>
+              <li>
+                <a href="#" target="_blank"
+                  ><img
+                    src="https://mdbgo.io/dawidadach/responsiveemail/img/in-color.png"
+                    alt=""
+                /></a>
+              </li>
+              <li>
+                <a href="#" target="_blank"
+                  ><img
+                    src="https://mdbgo.io/dawidadach/responsiveemail/img/tw-color.png"
+                    alt=""
+                /></a>
+              </li>
+              <li>
+                <a href="#" target="_blank"
+                  ><img
+                    src="https://mdbgo.io/dawidadach/responsiveemail/img/yt-color.png"
+                    alt=""
+                /></a>
+              </li>
+            </ul>
+          </div> 
+         </div>
+         <div>
         <footer>
           <p id="contact">
             Crafts and Coffee <br />
