--- a/index.html
+++ b/index.html
@@ -131,28 +131,28 @@
            <div>
             <ul id="social">
               <li>
-                <a href="#" target="_blank"
+                <a href="https://etsy.me/3ADTO61" target="_blank"
                   ><img
                     src="https://mdbgo.io/dawidadach/responsiveemail/img/fb-color.png"
                     alt=""
                 /></a>
               </li>
               <li>
-                <a href="#" target="_blank"
+                <a href="https://etsy.me/3ADTO61" target="_blank"
                   ><img
                     src="https://mdbgo.io/dawidadach/responsiveemail/img/in-color.png"
                     alt=""
                 /></a>
               </li>
               <li>
-                <a href="#" target="_blank"
+                <a href="https://etsy.me/3ADTO61" target="_blank"
                   ><img
                     src="https://mdbgo.io/dawidadach/responsiveemail/img/tw-color.png"
                     alt=""
                 /></a>
               </li>
               <li>
-                <a href="#" target="_blank"
+                <a href="https://etsy.me/3ADTO61" target="_blank"
                   ><img
                     src="https://mdbgo.io/dawidadach/responsiveemail/img/yt-color.png"
                     alt=""
