--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <p id="contact">
             Crafts and Coffee <br />
             12345 N Java Ave <br />
-            48457 Espresso, MI <br />
+            Espresso, MI 48457 <br />
             contact@craftscoffee.com
           </p>
         </footer>
